--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ out
 dist
 
 node_modules
+credentials
+admin@global-citizens-network.card
+adminCard.card
+ca.card
+connection-profile.json
+global-citizens-network.bna
