--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "global-citizens-network",
   "version": "0.0.1",
-  "description": "This pattern should be able to Construct a 3-member blockchain application using the IBM Blockchain Platform, consisting of the following entities: an organization representing a government entity, an organization representing an NGO focused on the provision of aid, and an organization representing Global Citizen.",
+  "description": "The goal of this pattern is to build a 3-member blockchain application using the IBM Blockchain Platform, consisting of the following entities: an organization representing a government entity, an organization representing Global Citizen(i.e. NGO ) focused on the provision of aid, and  an organization representing Aid organization receiving the funds from governments for the humanitarian causes",
   "scripts": {
     "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/global-citizens-network.bna",
     "test": "mocha --recursive"
