updating README to point to latest versions of Composer

--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "mkdirp": "latest",
     "mocha": "latest"
   },
-  "dependencies": {}
+  "dependencies": {
+    "composer-cli": "^0.20.2"
+  }
 }
